====================
StalkerGantt Changes
====================
0.1.0.a2
--------
* Fixed a lot of issues related with the new data structure, it seems
  everything is working properly right now.
* Parent Tasks displayed differently than the leaf tasks (on paar with the
  other gantt charts).
* Fixed jQueryGantt, it is now possible to correctly move a TaskBar without
  getting in to infinite loop.
* The timing resolution of jQueryGantt is now 1 hour.

0.1.0.a1
--------
* Changed the data structure quite a bit.
* No `level` nor `rowId`, it is all related to the `Task.id`, `Task.parent_id`
  now, which far much better, because what you are viewing generally is a group
  of tasks which are not related to each other directly (tasks of a user from
  different branches), so putting a `level` will place them under the wrong
  task most of the time.
* There are new attributes like `bid`, `effort`, `length`, `children`,
  `depends_string`, `depends_ids`, `depends`, `parent_id`, `parent`,
  `is_scheduled`, `is_milestone`, `resources`, `resource_ids` in Task class.
* New attributes in GanttMaster for quick look up of tasks. Instead of
  looping through the GanttMaster.tasks list again and again to find one task
  with desired id, there is new attributes like GanttMaster.task_ids and
  GanttMaster.resource_ids for quick look up of the indexes. So finding a task
  becomes straight forward::
    
    index = GanttMaster.task_ids.index_of(desired_task_id)
    task = GanttMaster.tasks[index]
    # no need to tour around
* Removed all the editors windows, will use the custom coded Dojo UI to
  manipulate the Tasks.

0.0.1.a1
--------
* Added a new attribute ``parent`` to Task class. It will be used to properly
  implement the parent child relation of Tasks.